--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,6 @@
 <head><title>Privacy Policy</title></head>
 <body>
 <h2>Privacy Policy</h2>
-<p>This app (Qurtaba Tuktuk) uses WhatsApp Cloud API for messaging. We do not store or share user data outside Meta systems.</p>
+<p>This app (Qurtaba logistics) uses WhatsApp Cloud API for messaging. We do not store or share user data outside Meta systems.</p>
 </body>
 </html>
