--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,6 @@
 <head><title>Terms of Service</title></head>
 <body>
 <h2>Terms of Service</h2>
-<p>By using Qurtaba Tuktuk, you agree to communicate via WhatsApp according to Meta’s policies. No user data is collected or sold.</p>
+<p>By using Qurtaba Tuktuk, Qurtuba Logistics, you agree to communicate via WhatsApp according to Meta’s policies. No user data is collected or sold.</p>
 </body>
 </html>
