--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,8 @@
 <head><title>Privacy Policy</title></head>
 <body>
 <h2>Privacy Policy</h2>
+<h2>Qurtaba Mobility</h2>
+<p>Qurtaba Mobility is an urban transport and delivery platform connecting customers to reliable rides and logistics services.</p>
 <p>This app (Qurtaba Mobility) uses WhatsApp Cloud API for messaging. We do not store or share user data outside Meta systems.</p>
 </body>
 </html>
