--- a/terms.html
+++ b/terms.html
@@ -2,6 +2,8 @@
 <html>
 <head><title>Terms of Service</title></head>
 <body>
+<h2>Qurtaba Mobility</h2>
+<p>Qurtaba Mobility is an urban transport and delivery platform connecting customers to reliable rides and logistics services.</p>
 <h2>Terms of Service</h2>
 <p>By using Qurtaba Tuktuk, Qurtuba Logistics, you agree to communicate via WhatsApp according to Meta’s policies. No user data is collected or sold.</p>
 </body>
