--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head><title>Privacy Policy</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy | Qurtaba Mobility</title>
+</head>
 <body>
-<h2>Privacy Policy</h2>
-<h2>Qurtaba Mobility</h2>
-<p>Qurtaba Mobility is an urban transport and delivery platform connecting customers to reliable rides and logistics services.</p>
-<p>This app (Qurtaba Mobility) uses WhatsApp Cloud API for messaging. We do not store or share user data outside Meta systems.</p>
+  <h2>Qurtaba Mobility</h2>
+  <p><strong>Qurtaba Mobility</strong> is a transport and logistics service that connects customers with safe, reliable mobility solutions. We use WhatsApp Cloud API to communicate with customers regarding bookings, updates, and support.</p>
+
+  <h3>Privacy Policy</h3>
+  <p>Your privacy is important to us. Qurtaba Mobility does not collect or share personal data beyond what is necessary for communication and customer support.</p>
+  <p>We do not sell, trade, or disclose your information to third parties. Messages are handled securely via WhatsApp’s official API, under Meta’s data protection framework.</p>
+
+  <h3>Contact</h3>
+  <p>For any privacy concerns, contact us at <a href="mailto:siroshbashir01@gmail.com">siroshbashir01@gmail.com</a>.</p>
 </body>
 </html>
