--- a/terms.html
+++ b/terms.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head><title>Terms of Service</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms of Service | Qurtaba Mobility</title>
+</head>
 <body>
-<h2>Qurtaba Mobility</h2>
-<p>Qurtaba Mobility is an urban transport and delivery platform connecting customers to reliable rides and logistics services.</p>
-<h2>Terms of Service</h2>
-<p>By using Qurtaba Tuktuk, Qurtuba Logistics, you agree to communicate via WhatsApp according to Meta’s policies. No user data is collected or sold.</p>
+  <h2>Qurtaba Mobility</h2>
+  <p><strong>Qurtaba Mobility</strong> provides transport and delivery coordination services via WhatsApp and related communication platforms.</p>
+
+  <h3>Terms of Service</h3>
+  <p>By interacting with our WhatsApp service, you agree to communicate responsibly and in compliance with applicable laws. Qurtaba Mobility is not liable for losses arising from misuse or communication delays caused by third-party network issues.</p>
+
+  <p>Users consent to receiving booking confirmations, trip updates, and customer support messages from our verified WhatsApp number.</p>
+
+  <h3>Contact</h3>
+  <p>For inquiries or support, contact us at <a href="mailto:siroshbashir01@gmail.com">siroshbashir01@gmail.com</a>.</p>
 </body>
 </html>
