--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Qurtaba Mobility - Official</title>
-</head>
-<body>
-  <h1>Welcome to Qurtaba Mobility</h1>
-  <p><strong>Qurtaba Mobility</strong> is an emerging transport and logistics service offering reliable, safe, and efficient ride and delivery solutions. 
-     We use the WhatsApp Business Platform to connect directly with customers for booking, tracking, and support.</p>
-  <h3>Contact</h3>
-  <p>Email: <a href="mailto:siroshbashir01@gmail.com">siroshbashir01@gmail.com</a></p>
-  <p>Official Communication Channel: WhatsApp Business via Qurtaba Mobility</p>
-</body>
-</html>
+<h1>Qurtaba Mobility & Logistics</h1>
+<p>Qurtaba Mobility & Logistics provides ride, transport, and delivery solutions.
+We use WhatsApp Business for customer bookings, support, and real-time updates.</p>
